[package]
name = "utils"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
chrono = "0.4.38"
chrono-tz = { version = "0.10.0", features = ["serde"] }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
cpu-time = "1.0.0"
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
which = "6.0.3"

[build-dependencies]
built = { version = "0.7.4", features = ["chrono", "git2", "semver"] }
